Mon Jul 28 13:03:57 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any.cpp:
	* tao/Any.h: Provided a default implementation for
	  TAO::Any_Impl::_tao_decode ().

Mon Jul 28 12:47:22 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any_SystemException.cpp:

          Cosmetic changes.

        * tao/TAO.dsp:

          Added above file and corresponding header file to project.

Mon Jul 28 12:34:16 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any_SystemException.h:
	* tao/Any_SystemException.cpp: New Any_Impl classes to be used by
	  different concrete CORBA::SystemException  types. The way it was
	  done before added a lot of footprint.
	
	* tao/Exception.cpp: Use TAO::Any_SystemException class for Any
	  extraction and insertion operators. 

	* tao/Makefile.tao:
	* tao/tao.mpc:
	* tao/makefile.bor: Added the new file to the following Makefiles
	  and project files.

Mon Jul 28 13:25:00 2003  Stephen Torri <storri@cse.wustl.edu>

	* orbsvcs/orbsvcs/Metrics.idl:

	  Added missing file.

Mon Jul 28 10:48:49 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_exception/any_op_cs.cpp:

          Added generation of specialization for the
          TAO::Any_Dual_Impl_T<...>::demarshal_value method, for
          user exceptions. Bala will soon check in a specialization
          of the entire class for system exceptions.

        * TAO_IDL/be/be_visitor_exception/exception_ch.cpp:

          Removed the '_NOT_USED' part of environment variable for
          _tao_decode and _tao_encode methods. The implementation of
          both these methods may throw CORBA::MARSHAL.

        * tao/Any_Dual_Impl_T.cpp:
        * tao/Any_Dual_Impl_T.inl:

          Reverted my changes to the demarshal_value method in

          Thu Jul 24 11:35:31 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

          since we now have an alternate approach in the changes
          described above.
