@@ -93,8 +93,8 @@ Test_Exception::dii_req_invoke (CORBA::Request_ptr req
               ACE_DEBUG ((LM_DEBUG,
                           "Test_Exception::dii_req_invoke - "
                           "expected user exception"
-                          " (%s,%d)\n", 
-                          reason, 
+                          " (%s,%d)\n",
+                          reason,
                           mod_value));
             }
 
@@ -126,12 +126,66 @@ Test_Exception::dii_req_invoke (CORBA::Request_ptr req
 
       return;
     }
-  ACE_CATCH (CORBA::UNKNOWN, ex)
+  // Catch the SystemException type CORBA::NO_MEMORY thrown by the
+  // server to test the system exception.
+  ACE_CATCH (CORBA::NO_MEMORY, ex)
     {
-      // 'BadBoy' should be caught here. This happens when the IN arg == 2.
+      // 'NO_MEMORY' system exception should be caught here. This
+      // happens when the IN arg == 2.
       // Otherwise we don't set the other arg values so the validity
       // check will flag the error.
-      if (this->in_ % 3 == 2)
+      if (this->in_ % 4 == 2)
+        {
+          this->inout_ = this->in_ * 2;
+          this->out_ = this->in_ * 3;
+          this->ret_ = this->in_ * 4;
+
+          if (TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::dii_req_invoke - "
+                          "expected CORBA::NO_MEMORY system exception\n"));
+            }
+        }
+      else if (this->in_ % 4 == 1)
+        {
+          // We caught NO_MEMORY system exception when we should have caught Ooops.
+          if (TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught NO_MEMORY system exception - "
+                          "expected known user exception\n"));
+            }
+        }
+      else if (this->in_ % 4 == 3)
+        {
+          // We caught NO_MEMORY system exception when we should have caught UNKNOWN.
+          if (TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught NO_MEMORY system exception - "
+                          "expected UNKNOWN exception\n"));
+            }
+        }
+      else
+        {
+          // We caught NO_MEMORY system exception when we should have caught nothing.
+          if (TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught unexpected uknown exception\n"));
+            }
+        }
+    }
+  ACE_CATCH (CORBA::UNKNOWN, ex)
+    {
+      // 'BadBoy' should be caught here. This happens when the IN arg == 3.
+      // Otherwise we don't set the other arg values so the validity
+      // check will flag the error.
+      if (this->in_ % 4 == 3)
         {
           this->inout_ = this->in_ * 2;
           this->out_ = this->in_ * 3;
@@ -144,7 +198,7 @@ Test_Exception::dii_req_invoke (CORBA::Request_ptr req
                           "expected CORBA::UNKNOWN\n"));
             }
         }
-      else if (this->in_ % 3 == 1)
+      else if (this->in_ % 4 == 1)
         {
           // We caught UNKNOWN when we should have caught Ooops.
           if (TAO_debug_level > 0)
@@ -153,6 +207,17 @@ Test_Exception::dii_req_invoke (CORBA::Request_ptr req
                           "Test_Exception::run_sii_test - "
                           "caught unknown exception - "
                           "expected known user exception\n"));
+            }
+        }
+      else if (this->in_ % 4 == 2)
+        {
+          // We caught UNKNOWN exception when we should have caught NO_MEMORY.
+          if (TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught unknown exception - "
+                          "expected NO_MEMORY system exception\n"));
             }
         }
       else
@@ -223,9 +288,51 @@ Test_Exception::run_sii_test (Param_Test_ptr objref
           ACE_DEBUG ((LM_DEBUG,
                       "Test_Exception::run_sii_test - "
                       "expected user exception"
-                      " (%s,%d)\n", 
-                      reason, 
+                      " (%s,%d)\n",
+                      reason,
                       mod_value));
+        }
+
+      // These weren't passed back because of the exception. We
+      // set them here to the 'correct' values so the validity
+      // check won't return an error.
+      this->inout_ = this->in_ * 2;
+      this->out_ = this->in_ * 3;
+      this->ret_ = this->in_ * 4;
+      return 0;
+    }
+  ACE_CATCH (CORBA::NO_MEMORY, ex)
+    {
+      // 'SystemException' should be caught here, 'CORBA::NO_MEMORY'
+      // system exception is thrown by the servant when the
+          // IN argument == 2.
+      int d = this->in_ % 4;
+
+      if (d != 2)
+        {
+          if (d == 1 && TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught system exception - "
+                          "expected known user exception\n"));
+            }
+          else if (d == 3 && TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught system exception - "
+                          "expected unknown exception\n"));
+            }
+
+          return -1;
+        }
+
+      if (TAO_debug_level > 0)
+        {
+          ACE_PRINT_EXCEPTION (ex,
+                               "Test_Exception::run_sii_test - "
+                               "expected system exception\n");
         }
 
       // These weren't passed back because of the exception. We
@@ -241,10 +348,10 @@ Test_Exception::run_sii_test (Param_Test_ptr objref
       // 'BadBoy' should be caught here, since generated code for
       // Param_Test::test_exception() knows nothing about it.
       // 'Ooops' however, should not be caught here. 'BadBoy'
-      // is thrown by the servant when the IN argument == 2.
-      int d = this->in_ % 3;
+      // is thrown by the servant when the IN argument == 3.
+      int d = this->in_ % 4;
 
-      if (d != 2)
+      if (d != 3)
         {
           if (d == 1 && TAO_debug_level > 0)
             {
@@ -252,6 +359,13 @@ Test_Exception::run_sii_test (Param_Test_ptr objref
                           "Test_Exception::run_sii_test - "
                           "caught unknown exception - "
                           "expected known user exception\n"));
+            }
+          else if (d == 2 && TAO_debug_level > 0)
+            {
+              ACE_DEBUG ((LM_DEBUG,
+                          "Test_Exception::run_sii_test - "
+                          "caught unknown exception - "
+                          "expected known system exception\n"));
             }
 
           return -1;
@@ -261,7 +375,7 @@ Test_Exception::run_sii_test (Param_Test_ptr objref
         {
           ACE_PRINT_EXCEPTION (ex,
                                "Test_Exception::run_sii_test - "
-                               "expected system exception\n");
+                               "expected unknown exception\n");
         }
 
       // These weren't passed back because of the exception. We
