@@ -1,3 +1,11 @@
+Mon Jul 28 13:05:08 2003  Gan Deng <gan.deng@vanderbilt.edu>
+
+	* tests/Param_Test/except.cpp
+	* tests/Param_Test/param_test_i.cpp
+
+	  Added the testing for the SystemException into the
+	  exception test.
+
 Mon Jul 28 13:03:57 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* tao/Any.cpp:
